update README.md and index.js

--- a/src/app/stylus/index.styl
+++ b/src/app/stylus/index.styl
@@ -1,8 +1,8 @@
 body
-	background-color lightgreen
+	background-color rgba(54, 198, 213, 0.54)
 	.search-content
 		position: absolute
-		width: 300px
+		width: 200px
 		height: 20px
 		left: 0
 		right: 0
@@ -28,4 +28,3 @@ body
 				margin-top: 3px
 			.active
 				background-color: #66f2f2
-					
